import type {
  CurrentFileInfo,
  RefreshTabContextRequest,
  StreamCppRequest,
} from "./types/proto";

export const defaultRefreshTabContextPayload: RefreshTabContextRequest = {
  currentFile: {
    relativeWorkspacePath: "test.js",
    contents: "hello world",
    cursorPosition: {
      line: 0,
      column: 1,
    },
    dataframes: [],
    languageId: "",
    diagnostics: [],
    totalNumberOfLines: 0,
    contentsStartAtLine: 0,
    topChunks: [],
    fileVersion: 6,
    cellStartLines: [],
    cells: [],
    relyOnFilesync: false,
    workspaceRootPath: "/Users/somename/Desktop/test",
    lineEnding: "\n",
  },
  fileDiffHistories: [
    {
      fileName: "test.js",
      diffHistory: ["23-|\n23+|    \n"],
      diffHistoryTimestamps: [],
    },
  ],
  additionalFiles: [],
  timeSinceRequestStart: 10,
  timeAtRequestSend: Date.now(),
  workspaceId: "",
  supportsCpt: true,
  supportsCrlfCpt: true,
  clientTime: Date.now(),
  repositoryInfo: {
    repoName: process.env.REPO_NAME ?? "",
    repoOwner: process.env.REPO_OWNER ?? "",
    relativeWorkspacePath: ".",
    workspaceUris: {
      test: {
        $mid: 1,
        fsPath: "/Users/somename/Desktop/test",
        external: "file:///Users/somename/Desktop/test",
        path: "/Users/somename/Desktop/test",
        scheme: "file",
      },
    },
    orthogonalTransformSeed: 0,
    preferredEmbeddingModel: 0,
  },
};

export const defaultStreamCppCurrentFile: CurrentFileInfo = {
  relativeWorkspacePath: "Untitled-1",
  contents: "function ",
  cursorPosition: { line: 0, column: 1 },
  dataframes: [],
  languageId: "javascript",
  diagnostics: [],
  totalNumberOfLines: 0,
  contentsStartAtLine: 0,
  topChunks: [],
  fileVersion: 2,
  cellStartLines: [],
  cells: [],
  relyOnFilesync: false,
  workspaceRootPath: "",
  lineEnding: "\\n",
};

export const defaultStreamCppPayload: StreamCppRequest = {
  isDebug: false,
  giveDebugOutput: false,
  supportsCpt: false,
  supportsCrlfCpt: false,
  currentFile: defaultStreamCppCurrentFile,
  diffHistory: [],
  modelName: "fast",
  diffHistoryKeys: [],
  fileDiffHistories: [
    {
      fileName: "Untitled-1",
      diffHistory: ["1+| \\n"],
      diffHistoryTimestamps: [],
    },
  ],
  mergedDiffHistories: [],
  blockDiffPatches: [],
  contextItems: [],
  parameterHints: [],
  lspContexts: [],
  cppIntentInfo: { source: "line_change" },
  workspaceId: "",
  additionalFiles: [],
  clientTime: Date.now(),
  filesyncUpdates: [],
  timeSinceRequestStart: Date.now(),
  timeAtRequestSend: Date.now(),
  clientTimezoneOffset: new Date().getTimezoneOffset(),
  lspSuggestedItems: { suggestions: [] },
  codeResults: [],
};
